--- a/Frontend-projects/pomodoro/style/main.css
+++ b/Frontend-projects/pomodoro/style/main.css
@@ -77,3 +77,125 @@
 	background-color: #ef3d4f;
 	color: #fff;
 }
+
+/*ranger style */
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+/*/ styling the thumb /*/ 
+/* Special styling for WebKit/Blink */
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #EF3D4F;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background: #EF3D4F;
+  cursor: pointer;
+  margin-top: -14px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+}
+
+/* All the same stuff for Firefox */
+input[type=range]::-moz-range-thumb {
+  border: 1px solid #EF3D4F;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background: #EF3D4F;
+  cursor: pointer;
+  margin-top: -14px;
+}
+
+/* All the same stuff for IE */
+input[type=range]::-ms-thumb {
+ border: 1px solid #EF3D4F;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background: #EF3D4F;
+  cursor: pointer;
+  margin-top: -14px;
+}
+
+/* style of the line */
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #DEDCDB;
+  border-radius: 1.3px;
+  border: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #DEDCDB;
+}
+
+input[type=range]::-moz-range-track {
+ width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #DEDCDB;
+  border-radius: 1.3px;
+  border: none;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #DEDCDB;
+  border-radius: 1.3px;
+  border: none;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+	width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #DEDCDB;
+  border-radius: 1.3px;
+  border: none;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #DEDCDB;
+}
+input[type=range]::-ms-fill-upper {
+  	width: 100%;
+  height: 2.4px;
+  cursor: pointer;
+  box-shadow: none;
+  background: #DEDCDB;
+  border-radius: 1.3px;
+  border: none;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #DEDCDB;
+}
